# dash-wallet

./: .gitignore  build.gradle
.github/workflows/: dashwallet.yml
common/: build.gradle
common/src/main/java/org/dash/wallet/common/services/analytics/: AnalyticsService.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
features/exploredash/: build.gradle
features/exploredash/src/main/res/layout/: fragment_explore.xml
integrations/coinbase/: build.gradle
uphold-integration/src/main/res/values/: strings-uphold.xml
wallet/: AndroidManifest.xml  build.gradle
wallet/cpp/: CMakeLists.txt
wallet/cpp/dashj-bls/: CMakeLists.txt
wallet/res/layout/: activity_about.xml  fragment_more.xml  fragment_tools.xml
wallet/res/values/: strings-extra.xml  strings.xml
wallet/res/xml/: preference_about.xml
wallet/src/de/schildbach/wallet/: Constants.java  WalletApplication.java
wallet/src/de/schildbach/wallet/data/: DynamicFeeLoader.java
wallet/src/de/schildbach/wallet/di/: AppModule.kt
wallet/src/de/schildbach/wallet/ui/: MoreActivity.kt  ResetWalletDialog.kt  WalletActivity.java
wallet/src/de/schildbach/wallet/ui/explore/: ExploreFragment.kt
wallet/src/de/schildbach/wallet/ui/main/: WalletActivity.java
wallet/src/de/schildbach/wallet/ui/more/: AboutActivity.kt  AboutViewModel.kt  AdvancedSecurityActivity.kt  MoreFragment.kt  ToolsFragment.kt
wallet/src/de/schildbach/wallet/ui/send/: SendCoinsFragment.java
wallet/src/de/schildbach/wallet/ui/widget/: ShortcutsPane.kt
(+11 files in other folders)
